--- a/Copia_de_01_tlc_project.ipynb
+++ b/Copia_de_01_tlc_project.ipynb
@@ -71,6 +71,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "a5700add"
+      },
+      "source": [
+        "### Explanation of Performance Metrics Columns\n",
+        "\n",
+        "*   **Model**: This column simply indicates the name of the machine learning algorithm or model being evaluated (e.g., Linear Regression, Random Forest, XGBoost).\n",
+        "\n",
+        "*   **RMSE (Root Mean Squared Error)**: This is a common metric used to measure the difference between values predicted by a model and the actual values. It's the square root of the average of the squared errors. RMSE gives a relatively high weight to large errors, meaning it's sensitive to outliers.\n",
+        "    *   **For Trip Duration (min)**: Measures the average magnitude of the errors in minutes. A lower RMSE indicates better performance.\n",
+        "    *   **For Fare Amount ($)**: Measures the average magnitude of the errors in dollars. A lower RMSE indicates better performance.\n",
+        "\n",
+        "*   **MAE (Mean Absolute Error)**: This metric measures the average magnitude of the errors in a set of predictions, without considering their direction. It's the average of the absolute differences between prediction and actual observation over the test sample.\n",
+        "    *   **For Trip Duration (min)**: Measures the average absolute error in minutes. A lower MAE indicates better performance.\n",
+        "    *   **For Fare Amount ($)**: Measures the average absolute error in dollars. A lower MAE indicates better performance.\n",
+        "\n",
+        "*   **R^2 (R-squared or Coefficient of Determination)**: This metric represents the proportion of the variance in the dependent variable that is predictable from the independent variables. It indicates how well the model explains the variability of the target variable. The value typically ranges from 0 to 1.\n",
+        "    *   An R^2 of 1 indicates that the model perfectly predicts the variability of the target.\n",
+        "    *   An R^2 of 0 indicates that the model explains none of the variability of the target (meaning its predictions are no better than simply predicting the mean of the target).\n",
+        "    *   A higher R^2 generally indicates a better fit for the model."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "0b2a9e91"
       },
       "source": [
@@ -189,7 +213,7 @@
         "print(f\"X_test_cls shape: {X_test_cls.shape}\")\n",
         "print(f\"y_test_cls shape: {y_test_cls.shape}\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +279,7 @@
         "print(\"\\nClassification Report:\")\n",
         "print(classification_report(y_test_cls, y_pred_cls))\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9101,6 +9125,153 @@
         "### Insights or Next Steps\n",
         "*   **Hyperparameter Tuning for XGBoost:** The current XGBoost models used default parameters. Implementing hyperparameter tuning (e.g., using `GridSearchCV` or `RandomizedSearchCV`) for XGBoost is crucial to ensure a fair comparison with the already tuned Random Forest models and to potentially improve XGBoost's performance.\n",
         "*   **Advanced Optimization Techniques:** Further explore techniques such as feature engineering, model stacking/ensembling, and more robust cross-validation strategies to potentially enhance predictive accuracy and model stability across all models.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9f611e33"
+      },
+      "source": [
+        "# Task\n",
+        "The final task is to summarize the overall comparison of all algorithms for both trip duration and fare prediction.\n",
+        "\n",
+        "# Final Task\n",
+        "\n",
+        "## Overall Model Performance Comparison for Trip Duration and Fare Prediction\n",
+        "\n",
+        "This section provides a comprehensive summary and comparison of all evaluated machine learning models for both trip duration and fare amount prediction.\n",
+        "\n",
+        "### Model Performance for Trip Duration Prediction\n",
+        "\n",
+        "| Model                  | RMSE (min) | MAE (min) | R^2   |\n",
+        "| :--------------------- | :--------- | :-------- | :---- |\n",
+        "| Linear Regression      | 8.93       | 5.42      | 0.665 |\n",
+        "| Support Vector Regressor | 8.49       | 3.62      | 0.698 |\n",
+        "| Gradient Boosting      | 6.02       | 2.69      | 0.848 |\n",
+        "| Random Forest (Tuned)  | 5.21       | 1.95      | 0.886 |\n",
+        "| XGBoost (Default)      | 5.35       | 2.06      | 0.880 |\n",
+        "\n",
+        "**Summary for Trip Duration Prediction:**\n",
+        "The **Tuned Random Forest** model emerged as the best performer for predicting trip duration, achieving the lowest RMSE (5.21 minutes) and MAE (1.95 minutes), along with the highest R^2 (0.886). The default XGBoost model was very competitive, with slightly higher RMSE and MAE. Linear Regression showed the weakest performance, as expected for complex, non-linear relationships, while SVR and Gradient Boosting performed moderately well, with Gradient Boosting outperforming SVR.\n",
+        "\n",
+        "### Model Performance for Fare Amount Prediction\n",
+        "\n",
+        "| Model                  | RMSE       | MAE       | R^2   |\n",
+        "| :--------------------- | :--------- | :-------- | :---- |\n",
+        "| Random Forest          | $4.66      | $1.38     | 0.933 |\n",
+        "| XGBoost (Default)      | $4.67      | $1.40     | 0.932 |\n",
+        "\n",
+        "**Summary for Fare Amount Prediction:**\n",
+        "For fare amount prediction, both the **Random Forest** and the default **XGBoost** models delivered excellent and very similar performance. Random Forest had a marginal edge with slightly lower RMSE ($4.66) and MAE ($1.38), and a negligibly higher R^2 (0.933). Both models demonstrated a strong ability to predict fare amounts with high accuracy.\n",
+        "\n",
+        "### Overall Conclusion and Insights\n",
+        "\n",
+        "*   **Dominance of Ensemble Methods:** For both prediction tasks (duration and fare), tree-based ensemble methods (Random Forest, Gradient Boosting, XGBoost) significantly outperformed traditional linear models like Linear Regression and even non-linear kernel methods like SVR. This highlights the complex nature of taxi trip data, which these models are better equipped to handle.\n",
+        "*   **Random Forest as a Strong Performer:** The Random Forest model consistently delivered top-tier performance for both duration and price prediction, especially after hyperparameter tuning for duration. Its robust nature and ability to capture non-linear relationships make it highly suitable for this dataset.\n",
+        "*   **XGBoost's Potential:** The default XGBoost models were highly competitive, nearly matching the tuned Random Forest. This suggests that with proper hyperparameter tuning, XGBoost could potentially surpass or at least equally perform with Random Forest, especially given its reputation for superior performance in many machine learning challenges.\n",
+        "*   **Monetary Metrics Consistency:** All monetary evaluation metrics (RMSE, MAE for price prediction) were consistently formatted as currency, enhancing readability and interpretability for financial stakeholders.\n",
+        "*   **Generalization on New Data:** Both the Random Forest duration and price models showed strong generalization capabilities when evaluated on new monthly data (February 2024, February 2025, March 2025), consistently maintaining high performance metrics.\n",
+        "\n",
+        "### Next Steps\n",
+        "\n",
+        "1.  **XGBoost Hyperparameter Tuning:** Prioritize hyperparameter tuning for the XGBoost models to optimize their performance and conduct a more definitive comparison against the tuned Random Forest.\n",
+        "2.  **Model Ensembling/Stacking:** Explore combining the predictions from the top-performing models (e.g., Random Forest and XGBoost) to potentially achieve even higher accuracy and robustness.\n",
+        "3.  **Further Feature Engineering:** Investigate the creation of more sophisticated features (e.g., temporal features, weather data, external event data) that could capture more nuances in trip duration and fare dynamics.\n",
+        "4.  **Deployment Considerations:** With robust performance and strong generalization capabilities, the top models are good candidates for deployment in real-world applications such as dynamic pricing, estimated time of arrival (ETA) predictions, or operational planning."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "421498a3"
+      },
+      "source": [
+        "## Collect Duration Model Metrics\n",
+        "\n",
+        "### Subtask:\n",
+        "Gather the Root Mean Squared Error (RMSE), Mean Absolute Error (MAE), and R-squared (R^2) for all duration prediction models (Linear Regression, Support Vector Regressor, Random Forest, Gradient Boosting, XGBoost) from the previous execution outputs.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bebb9df4"
+      },
+      "source": [
+        "### Duration Model Performance Metrics\n",
+        "\n",
+        "| Model                 | RMSE (min) | MAE (min) | R^2   |\n",
+        "| :-------------------- | :--------- | :-------- | :---- |\n",
+        "| Linear Regression     | 8.93       | 5.42      | 0.665 |\n",
+        "| Support Vector Regressor | 8.49       | 3.62      | 0.698 |\n",
+        "| Random Forest (Initial) | 5.23       | 1.96      | 0.885 |\n",
+        "| Gradient Boosting     | 6.02       | 2.69      | 0.848 |\n",
+        "| Random Forest (Tuned) | 5.22       | 1.95      | 0.886 |\n",
+        "| XGBoost (Default)     | 5.35       | 2.06      | 0.880 |"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7e1d83a8"
+      },
+      "source": [
+        "## Collect Price Model Metrics\n",
+        "\n",
+        "### Subtask:\n",
+        "Gather the RMSE, MAE, and R^2 for all price prediction models (Random Forest, XGBoost) from the previous execution outputs, ensuring monetary values are identified.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "20f648b5"
+      },
+      "source": [
+        "## Price Model Metrics Summary\n",
+        "\n",
+        "Below are the Root Mean Squared Error (RMSE), Mean Absolute Error (MAE), and R-squared (R^2) values for the Random Forest and XGBoost models for fare amount prediction, as gathered from previous execution outputs.\n",
+        "\n",
+        "| Model                  | RMSE       | MAE       | R^2   |\n",
+        "| :--------------------- | :--------- | :-------- | :---- |\n",
+        "| Random Forest          | $4.66      | $1.38     | 0.933 |\n",
+        "| XGBoost                | $4.67      | $1.40     | 0.932 |\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ad3f8dd3"
+      },
+      "source": [
+        "## Final Task\n",
+        "\n",
+        "### Subtask:\n",
+        "Summarize the overall comparison of all algorithms for both trip duration and fare prediction.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "df107bcc"
+      },
+      "source": [
+        "## Summary:\n",
+        "\n",
+        "The final task was to summarize the overall comparison of all algorithms for both trip duration and fare prediction.\n",
+        "\n",
+        "### Data Analysis Key Findings\n",
+        "\n",
+        "*   **Trip Duration Prediction:** The Tuned Random Forest model was the top performer, achieving the lowest RMSE of 5.21 minutes and MAE of 1.95 minutes, with the highest R^2 of 0.886. The default XGBoost model was very competitive (RMSE 5.35 min, MAE 2.06 min, R^2 0.880), while Linear Regression showed the weakest performance.\n",
+        "*   **Fare Amount Prediction:** Both Random Forest and XGBoost models performed exceptionally well and very similarly. Random Forest had a slight edge with an RMSE of \\$4.66 and MAE of \\$1.38, alongside an R^2 of 0.933, marginally outperforming XGBoost (RMSE \\$4.67, MAE \\$1.40, R^2 0.932).\n",
+        "*   **Dominance of Ensemble Methods:** Tree-based ensemble methods (Random Forest, Gradient Boosting, XGBoost) consistently outperformed traditional linear models (Linear Regression) and Support Vector Regressor for both prediction tasks.\n",
+        "*   **Strong Generalization:** The top-performing models demonstrated robust generalization capabilities when tested on new monthly data, maintaining high performance metrics.\n",
+        "\n",
+        "### Insights or Next Steps\n",
+        "\n",
+        "*   **XGBoost Hyperparameter Tuning:** Prioritize hyperparameter tuning for XGBoost models to potentially surpass or match the performance of the tuned Random Forest, especially given its competitive default performance.\n",
+        "*   **Model Ensembling/Stacking:** Explore combining predictions from the best-performing models (e.g., Random Forest and XGBoost) to further enhance accuracy and robustness.\n"
       ]
     }
   ]
